Debug large-image display; test w/local girder system
* Use "propsDefinedByGeoJS" to handle geojs-assigned properties
  (was screwing up zIndex for some reason)
* Fix tricky error (infinite loop) that can occur when zooming by mouse
  (more like a workaround)

--- a/js/scripts/templates/js_wrapper.mustache
+++ b/js/scripts/templates/js_wrapper.mustache
@@ -45,8 +45,8 @@ var {{ modelName }} = {{ superClass.modelName }}.extend({
         {{/if}}
         {{/each}}
 
-        {{#each props_created_by_three as |propName|}}
-        this.props_created_by_three['{{propName}}'] = true;
+        {{#each props_created_by_geojs as |propName|}}
+        this.props_created_by_geojs['{{propName}}'] = true;
         {{/each}}
         {{#each enum_properties as |enumTypeName propName|}}
         this.enum_property_types['{{ propName }}'] = '{{ enumTypeName }}';
